hard-gists/1035190/run.log
=== Docker Run Log for 1035190 ===
Started at: Mi 29. Okt 11:46:00 CET 2025

[2025-10-29 11:46:00] START: Running container for 1035190
[2025-10-29 11:46:01] SUCCESS: Container 897f20d403982379c147636e28cf40e1cc10c34114fbd67aee897320569ddbdb started for 1035190
=== Container logs for 1035190 ===
  File "/snippet.py", line 63
    raise RuntimeError, "Django can't perform an SSL redirect while " \
                      ^
SyntaxError: invalid syntax
=== End of logs for 1035190 ===
[2025-10-29 11:46:03] INFO: Container 897f20d403982379c147636e28cf40e1cc10c34114fbd67aee897320569ddbdb has stopped
